--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .ipynb_checkpoints/311_CombinedMaster-checkpoint.ipynb
 .ipynb_checkpoints/311cleaner-checkpoint.ipynb
 .ipynb_checkpoints/311weatherGetter-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
