added some analysis
not sure it's meaningful

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .ipynb_checkpoints/311weatherGetter-checkpoint.ipynb
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
