--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
