--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
 .ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/311_Analysis-checkpoint.ipynb
+.ipynb_checkpoints/classifier_311-checkpoint.ipynb
