--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 .ipynb_checkpoints/311-Classifier-Analysis-checkpoint.ipynb
 .ipynb_checkpoints/311-DataViz-checkpoint.ipynb
 .ipynb_checkpoints/classifier_311_groups-checkpoint.ipynb
+.ipynb_checkpoints/311-Classifier-Analysis-Copy1-checkpoint.ipynb
