added final analysis

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 .ipynb_checkpoints/311-DataViz-checkpoint.ipynb
 .ipynb_checkpoints/classifier_311_groups-checkpoint.ipynb
 .ipynb_checkpoints/311-Classifier-Analysis-Copy1-checkpoint.ipynb
+.ipynb_checkpoints/311-Classifier-Analysis-Final-checkpoint.ipynb
